# JQ-BNM

./: CMakeLists.txt  README.md
BNM-IL2CPP/: BNM.hpp  Defines.hpp  ExportCall.hpp  Exports.hpp  Offsets.hpp
BNM-IL2CPP/Structures/: IL2CPP.hpp  UnityEngine.hpp
BNM-IL2CPP/Structures/IL2CPP/: Array.hpp  Assembly.hpp  Class.hpp  Domain.hpp  Field.hpp  Image.hpp  Method.hpp  Object.hpp  String.hpp  Type.hpp
BNM-IL2CPP/Utils/: Dumper.hpp  MemPattern.hpp  Other.hpp
bnm/include/: array.h  assembly.h  bnm.h  class.h  defines.h  domain.h  dumper.h  exportcall.h  exports.h  field.h  image.h  method.h  object.h  string.h  type.h
bnm/src/: array.cpp  assembly.cpp  bnm.cpp  class.cpp  domain.cpp  dumper.cpp  exports.cpp  field.cpp  image.cpp  method.cpp  object.cpp  string.cpp  type.cpp
examples/: example1.cpp
